fondo tamaño pc

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
   <title>Frontend Mentor | Notifications page</title>
 </head>
 <body>
-
-  <header>
+  <main class="contenedor">
     <div class="contenedor_head">
       <strong>Notifications<span id="numero"></span></strong>
       <p  class="Marcar_todo" id="todo">Mark all as read</p> 
     </div>
-  </header>
-  <main class="contenedor">
     <div class="notificacion">
       <div class="imgPerfil">
         <img src="assets/images/avatar-mark-webber.webp" alt="perfil">
@@ -47,7 +44,7 @@
       </div>
     </div>
   
-    <div class="notificacion">
+    <div class="notificacion abierto">
       <div class="imgPerfil">
         <img src="assets/images/avatar-rizky-hasanuddin.webp" alt="perfil">
       </div>
@@ -63,7 +60,7 @@
       </div>
     </div>
   
-    <div class="notificacion noti_Img">
+    <div class="notificacion abierto noti_Img">
       <div class="contenedor_noti">
         <div class="imgPerfil">
           <img src="assets/images/avatar-kimberly-smith.webp" alt="perfil">
@@ -78,8 +75,7 @@
       </div>
     </div>
    
-  
-    <div class="notificacion">
+    <div class="notificacion abierto">
       <div class="imgPerfil">
         <img src="assets/images/avatar-nathan-peterson.webp" alt="perfil">
       </div>
@@ -89,7 +85,7 @@
       </div>
     </div>
     
-    <div class="notificacion">
+    <div class="notificacion abierto">
       <div class="imgPerfil">
         <img src="assets/images/avatar-anna-kim.webp" alt="perfil">
       </div>
